# PyTestWWW-Get

./: LICENSE  MANIFEST.in  README.md  pyproject.toml
src/pywwwget/: __init__.py  cli.py  core.py
tests/: test_basic.py
