[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "pywwwget-py3"
version = "0.1.0"
description = "Multi-protocol get/put module (Python 3 only) with HTTP serve/receive and custom tcp/udp streaming."
readme = "README.md"
requires-python = ">=3.9"
classifiers = [
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3 :: Only",
  "Operating System :: OS Independent",
]
dependencies = []

[project.optional-dependencies]
httpx = ["httpx>=0.24"]
requests = ["requests>=2.28"]
pycurl = ["pycurl>=7.45"]
sftp = ["paramiko>=2.12", "pysftp>=0.2.9"]

[project.scripts]
wwwget = "pywwwget.cli:main"

[tool.setuptools]
package-dir = {"": "src"}

[tool.setuptools.packages.find]
where = ["src"]
